--- a/phpdoc/interfaces.html
+++ b/phpdoc/interfaces.html
@@ -124,8 +124,7 @@
                                             <em><a href="Patterns/Interfaces/RepositoryInterface.html"><abbr title="Patterns\Interfaces\RepositoryInterface">Patterns\Interfaces\RepositoryInterface</abbr></a></em>
                                     </div>
                 <div class="col-md-6">
-                    
-
+                    A simple interface to manage a model repository
                 </div>
             </div>
                     <div class="row">
@@ -168,38 +167,6 @@ method chaining constructing them like:
                                     </div>
                 <div class="col-md-6">
                     A simple interface to manage a set of options statically
-                </div>
-            </div>
-                    <div class="row">
-                <div class="col-md-6">
-                                            <em><a href="Patterns/Interfaces/TranslatableInterface.html"><abbr title="Patterns\Interfaces\TranslatableInterface">Patterns\Interfaces\TranslatableInterface</abbr></a></em>
-                                    </div>
-                <div class="col-md-6">
-                    This work is BETA (not fully tested)
-                </div>
-            </div>
-                    <div class="row">
-                <div class="col-md-6">
-                                            <em><a href="Patterns/Interfaces/UserInterface.html"><abbr title="Patterns\Interfaces\UserInterface">Patterns\Interfaces\UserInterface</abbr></a></em>
-                                    </div>
-                <div class="col-md-6">
-                    This work is BETA (not fully tested)
-                </div>
-            </div>
-                    <div class="row">
-                <div class="col-md-6">
-                                            <em><a href="Patterns/Interfaces/ViewInterface.html"><abbr title="Patterns\Interfaces\ViewInterface">Patterns\Interfaces\ViewInterface</abbr></a></em>
-                                    </div>
-                <div class="col-md-6">
-                    This work is BETA (not fully tested)
-                </div>
-            </div>
-                    <div class="row">
-                <div class="col-md-6">
-                                            <em><a href="Patterns/Interfaces/WebPageInterface.html"><abbr title="Patterns\Interfaces\WebPageInterface">Patterns\Interfaces\WebPageInterface</abbr></a></em>
-                                    </div>
-                <div class="col-md-6">
-                    This work is BETA (not fully tested)
                 </div>
             </div>
             </div>
