--- a/phpdoc/Patterns/Abstracts/AbstractOptionable.html
+++ b/phpdoc/Patterns/Abstracts/AbstractOptionable.html
@@ -78,7 +78,7 @@
 
             <div class="description">
             <p>A simple object options manager</p>            <p>This class is a helper to create an object that may handle a set of options.
-The options can be defined globally or individually, overrided during the
+The options can be defined globally or individually, overwritten during the
 object life-cycle and accessed easily. The <code>get</code> accessor allows to define
 a default value returned if no other value is found.</p>
 
@@ -120,7 +120,7 @@ It MUST be updated with it each time.</p>        </div>
             </div>
                     <div class="row">
                 <div class="col-md-2 type">
-                    array
+                    mixed
                 </div>
                 <div class="col-md-8 type">
                     <a href="#method_getOption">getOption</a>(string $name, mixed $default = null)
@@ -135,7 +135,7 @@ It MUST be updated with it each time.</p>        </div>
             <div id="method-details">
                     <div class="method-item">
                     <h3 id="method_setOptions">
-        <div class="location">at line 56</div>
+        <div class="location">at line 57</div>
         <code>                    <a href="../../Patterns/Abstracts/AbstractOptionable.html"><abbr title="Patterns\Abstracts\AbstractOptionable">AbstractOptionable</abbr></a>
     <strong>setOptions</strong>(array $options)</code>
     </h3>
@@ -172,7 +172,7 @@ It MUST be updated with it each time.</p>        </div>
             </div>
                     <div class="method-item">
                     <h3 id="method_setOption">
-        <div class="location">at line 69</div>
+        <div class="location">at line 70</div>
         <code>                    <a href="../../Patterns/Abstracts/AbstractOptionable.html"><abbr title="Patterns\Abstracts\AbstractOptionable">AbstractOptionable</abbr></a>
     <strong>setOption</strong>(string $name, mixed $value)</code>
     </h3>
@@ -214,7 +214,7 @@ It MUST be updated with it each time.</p>        </div>
             </div>
                     <div class="method-item">
                     <h3 id="method_getOptions">
-        <div class="location">at line 80</div>
+        <div class="location">at line 81</div>
         <code>                    array
     <strong>getOptions</strong>()</code>
     </h3>
@@ -240,8 +240,8 @@ It MUST be updated with it each time.</p>        </div>
             </div>
                     <div class="method-item">
                     <h3 id="method_getOption">
-        <div class="location">at line 92</div>
-        <code>                    array
+        <div class="location">at line 93</div>
+        <code>                    mixed
     <strong>getOption</strong>(string $name, mixed $default = null)</code>
     </h3>
     <div class="details">
@@ -268,7 +268,7 @@ It MUST be updated with it each time.</p>        </div>
 
                     <table class="table table-condensed">
         <tr>
-            <td>array</td>
+            <td>mixed</td>
             <td>The current option's value if defined, <code>$default</code> otherwise</td>
         </tr>
     </table>
