--- a/phpdoc/Patterns/Abstracts/AbstractResponse.html
+++ b/phpdoc/Patterns/Abstracts/AbstractResponse.html
@@ -73,7 +73,8 @@
     </div>
 
     <p>abstract     class
-    <strong>AbstractResponse</strong></p>
+    <strong>AbstractResponse</strong>        implements
+        <a href="../../Patterns/Interfaces/ResponseInterface.html"><abbr title="Patterns\Interfaces\ResponseInterface">ResponseInterface</abbr></a></p>
 
             <div class="description">
             <p>Global HTML response class</p>            <p>This class defines a very simple HTML response pattern with a content
@@ -191,7 +192,7 @@ or display a raw file content and make a redirection to a new URL.</p>        </
                 </div>
                 <div class="col-md-8 type">
                     <a href="#method_download">download</a>(string $file = null, string $type = null, string $file_name = null)
-                                            <p>This method must process a browser file download in <code>$type</code> content-type if defined</p>                </div>
+                                            <p>This method must process a browser file download named <code>$file_name</code> if defined and in <code>$type</code> content-type if defined</p>                </div>
                 <div class="col-md-2"></div>
             </div>
                     <div class="row">
@@ -211,7 +212,7 @@ or display a raw file content and make a redirection to a new URL.</p>        </
             <div id="method-details">
                     <div class="method-item">
                     <h3 id="method_setBody">
-        <div class="location">at line 51</div>
+        <div class="location">at line 55</div>
         <code>                    <a href="../../Patterns/Abstracts/AbstractResponse.html"><abbr title="Patterns\Abstracts\AbstractResponse">AbstractResponse</abbr></a>
     <strong>setBody</strong>(string $body)</code>
     </h3>
@@ -247,7 +248,7 @@ or display a raw file content and make a redirection to a new URL.</p>        </
             </div>
                     <div class="method-item">
                     <h3 id="method_getBody">
-        <div class="location">at line 60</div>
+        <div class="location">at line 64</div>
         <code>                    string
     <strong>getBody</strong>()</code>
     </h3>
@@ -272,7 +273,7 @@ or display a raw file content and make a redirection to a new URL.</p>        </
             </div>
                     <div class="method-item">
                     <h3 id="method_setHeaders">
-        <div class="location">at line 78</div>
+        <div class="location">at line 82</div>
         <code>                    <a href="../../Patterns/Abstracts/AbstractResponse.html"><abbr title="Patterns\Abstracts\AbstractResponse">AbstractResponse</abbr></a>
     <strong>setHeaders</strong>(array $params)</code>
     </h3>
@@ -308,7 +309,7 @@ or display a raw file content and make a redirection to a new URL.</p>        </
             </div>
                     <div class="method-item">
                     <h3 id="method_addHeader">
-        <div class="location">at line 89</div>
+        <div class="location">at line 93</div>
         <code>                    <a href="../../Patterns/Abstracts/AbstractResponse.html"><abbr title="Patterns\Abstracts\AbstractResponse">AbstractResponse</abbr></a>
     <strong>addHeader</strong>(string $name, string $value = null)</code>
     </h3>
@@ -350,7 +351,7 @@ or display a raw file content and make a redirection to a new URL.</p>        </
             </div>
                     <div class="method-item">
                     <h3 id="method_getHeaders">
-        <div class="location">at line 98</div>
+        <div class="location">at line 102</div>
         <code>                    array
     <strong>getHeaders</strong>()</code>
     </h3>
@@ -375,7 +376,7 @@ or display a raw file content and make a redirection to a new URL.</p>        </
             </div>
                     <div class="method-item">
                     <h3 id="method_getHeader">
-        <div class="location">at line 107</div>
+        <div class="location">at line 111</div>
         <code>                    string|null
     <strong>getHeader</strong>(string $name)</code>
     </h3>
@@ -411,7 +412,7 @@ or display a raw file content and make a redirection to a new URL.</p>        </
             </div>
                     <div class="method-item">
                     <h3 id="method_hasHeader">
-        <div class="location">at line 118</div>
+        <div class="location">at line 122</div>
         <code>                    bool
     <strong>hasHeader</strong>(string $name)</code>
     </h3>
@@ -447,7 +448,7 @@ or display a raw file content and make a redirection to a new URL.</p>        </
             </div>
                     <div class="method-item">
                     <h3 id="method_renderHeaders">
-        <div class="location">at line 126</div>
+        <div class="location">at line 130</div>
         <code>                    void
     <strong>renderHeaders</strong>()</code>
     </h3>
@@ -472,7 +473,7 @@ or display a raw file content and make a redirection to a new URL.</p>        </
             </div>
                     <div class="method-item">
                     <h3 id="method_redirect">
-        <div class="location">at line 145</div>
+        <div class="location">at line 151</div>
         <code>    abstract                void
     <strong>redirect</strong>(string $url, bool $permanent = false)</code>
     </h3>
@@ -486,14 +487,12 @@ or display a raw file content and make a redirection to a new URL.</p>        </
                     <tr>
                 <td>string</td>
                 <td>$url</td>
-                <td>
-</td>
+                <td>The URL to redirect to</td>
             </tr>
                     <tr>
                 <td>bool</td>
                 <td>$permanent</td>
-                <td>
-</td>
+                <td>Is it a permanent redirection ? (default is false)</td>
             </tr>
             </table>
 
@@ -516,7 +515,7 @@ or display a raw file content and make a redirection to a new URL.</p>        </
             </div>
                     <div class="method-item">
                     <h3 id="method_send">
-        <div class="location">at line 154</div>
+        <div class="location">at line 160</div>
         <code>    abstract                void
     <strong>send</strong>(string $content = null, string $type = null)</code>
     </h3>
@@ -530,14 +529,12 @@ or display a raw file content and make a redirection to a new URL.</p>        </
                     <tr>
                 <td>string</td>
                 <td>$content</td>
-                <td>
-</td>
+                <td>The body of the response to send</td>
             </tr>
                     <tr>
                 <td>string</td>
                 <td>$type</td>
-                <td>
-</td>
+                <td>A content type to handle</td>
             </tr>
             </table>
 
@@ -560,13 +557,13 @@ or display a raw file content and make a redirection to a new URL.</p>        </
             </div>
                     <div class="method-item">
                     <h3 id="method_download">
-        <div class="location">at line 164</div>
+        <div class="location">at line 170</div>
         <code>    abstract                void
     <strong>download</strong>(string $file = null, string $type = null, string $file_name = null)</code>
     </h3>
     <div class="details">
                     <div class="method-description">
-                                    <p>This method must process a browser file download in <code>$type</code> content-type if defined</p>                                </div>
+                                    <p>This method must process a browser file download named <code>$file_name</code> if defined and in <code>$type</code> content-type if defined</p>                                </div>
                 <div class="tags">
                             <h4>Parameters</h4>
 
@@ -574,20 +571,17 @@ or display a raw file content and make a redirection to a new URL.</p>        </
                     <tr>
                 <td>string</td>
                 <td>$file</td>
-                <td>
-</td>
+                <td>The path to the file to download</td>
             </tr>
                     <tr>
                 <td>string</td>
                 <td>$type</td>
-                <td>
-</td>
+                <td>The file type to build headers</td>
             </tr>
                     <tr>
                 <td>string</td>
                 <td>$file_name</td>
-                <td>
-</td>
+                <td>A specific filename to define for download</td>
             </tr>
             </table>
 
@@ -610,7 +604,7 @@ or display a raw file content and make a redirection to a new URL.</p>        </
             </div>
                     <div class="method-item">
                     <h3 id="method_flush">
-        <div class="location">at line 173</div>
+        <div class="location">at line 179</div>
         <code>    abstract                void
     <strong>flush</strong>(string $file_content = null, string $type = null)</code>
     </h3>
@@ -624,14 +618,12 @@ or display a raw file content and make a redirection to a new URL.</p>        </
                     <tr>
                 <td>string</td>
                 <td>$file_content</td>
-                <td>
-</td>
+                <td>The plain text content to display</td>
             </tr>
                     <tr>
                 <td>string</td>
                 <td>$type</td>
-                <td>
-</td>
+                <td>The content type to build headers</td>
             </tr>
             </table>
 
