--- a/phpdoc/Patterns/Traits/Optionable.html
+++ b/phpdoc/Patterns/Traits/Optionable.html
@@ -113,7 +113,7 @@
             </div>
                     <div class="row">
                 <div class="col-md-2 type">
-                    array
+                    mixed
                 </div>
                 <div class="col-md-8 type">
                     <a href="#method_getOption">getOption</a>(string $name, mixed $default = null)
@@ -128,7 +128,7 @@
             <div id="method-details">
                     <div class="method-item">
                     <h3 id="method_setOptions">
-        <div class="location">at line 46</div>
+        <div class="location">at line 47</div>
         <code>                    <a href="../../Patterns/Traits/Optionable.html"><abbr title="Patterns\Traits\Optionable">Optionable</abbr></a>
     <strong>setOptions</strong>(array $options)</code>
     </h3>
@@ -165,7 +165,7 @@
             </div>
                     <div class="method-item">
                     <h3 id="method_setOption">
-        <div class="location">at line 59</div>
+        <div class="location">at line 60</div>
         <code>                    <a href="../../Patterns/Traits/Optionable.html"><abbr title="Patterns\Traits\Optionable">Optionable</abbr></a>
     <strong>setOption</strong>(string $name, mixed $value)</code>
     </h3>
@@ -207,7 +207,7 @@
             </div>
                     <div class="method-item">
                     <h3 id="method_getOptions">
-        <div class="location">at line 70</div>
+        <div class="location">at line 71</div>
         <code>                    array
     <strong>getOptions</strong>()</code>
     </h3>
@@ -233,8 +233,8 @@
             </div>
                     <div class="method-item">
                     <h3 id="method_getOption">
-        <div class="location">at line 82</div>
-        <code>                    array
+        <div class="location">at line 83</div>
+        <code>                    mixed
     <strong>getOption</strong>(string $name, mixed $default = null)</code>
     </h3>
     <div class="details">
@@ -261,7 +261,7 @@
 
                     <table class="table table-condensed">
         <tr>
-            <td>array</td>
+            <td>mixed</td>
             <td>The current option's value if defined, <code>$default</code> otherwise</td>
         </tr>
     </table>
