update the documentation without the HttpStatus

--- a/phpdoc/Patterns/Traits.html
+++ b/phpdoc/Patterns/Traits.html
@@ -76,10 +76,34 @@
         <div class="container-fluid underlined">
                     <div class="row">
                 <div class="col-md-6">
-                                            <a href="../Patterns/Traits/Optionable.html"><abbr title="Patterns\Traits\Optionable">Patterns\Traits\Optionable</abbr></a>
+                                            <a href="../Patterns/Traits/AccessibleTrait.html"><abbr title="Patterns\Traits\AccessibleTrait">Patterns\Traits\AccessibleTrait</abbr></a>
+                                    </div>
+                <div class="col-md-6">
+                    Magic properties accessors
+                </div>
+            </div>
+                    <div class="row">
+                <div class="col-md-6">
+                                            <a href="../Patterns/Traits/OptionableTrait.html"><abbr title="Patterns\Traits\OptionableTrait">Patterns\Traits\OptionableTrait</abbr></a>
                                     </div>
                 <div class="col-md-6">
                     This trait is the exact copy of the <code>\Patterns\Abstracts\AbstractOptionable</code> class.
+                </div>
+            </div>
+                    <div class="row">
+                <div class="col-md-6">
+                                            <a href="../Patterns/Traits/SingletonTrait.html"><abbr title="Patterns\Traits\SingletonTrait">Patterns\Traits\SingletonTrait</abbr></a>
+                                    </div>
+                <div class="col-md-6">
+                    Basic singleton object definition
+                </div>
+            </div>
+                    <div class="row">
+                <div class="col-md-6">
+                                            <a href="../Patterns/Traits/TemplateViewTrait.html"><abbr title="Patterns\Traits\TemplateViewTrait">Patterns\Traits\TemplateViewTrait</abbr></a>
+                                    </div>
+                <div class="col-md-6">
+                    This trait is the exact copy of the <code>\Patterns\Abstracts\AbstractView</code> class.
                 </div>
             </div>
             </div>
