--- a/phpdoc/classes.html
+++ b/phpdoc/classes.html
@@ -81,14 +81,6 @@
             </div>
                     <div class="row">
                 <div class="col-md-6">
-                                            <a href="Patterns/Abstracts/AbstractResponse.html"><abbr title="Patterns\Abstracts\AbstractResponse">Patterns\Abstracts\AbstractResponse</abbr></a>
-                                    </div>
-                <div class="col-md-6">
-                    Global HTML response class
-                </div>
-            </div>
-                    <div class="row">
-                <div class="col-md-6">
                                             <a href="Patterns/Abstracts/AbstractSingleton.html"><abbr title="Patterns\Abstracts\AbstractSingleton">Patterns\Abstracts\AbstractSingleton</abbr></a>
                                     </div>
                 <div class="col-md-6">
@@ -131,18 +123,18 @@ method chaining constructing them like:
             </div>
                     <div class="row">
                 <div class="col-md-6">
-                                            <a href="Patterns/Commons/HttpStatus.html"><abbr title="Patterns\Commons\HttpStatus">Patterns\Commons\HttpStatus</abbr></a>
-                                    </div>
-                <div class="col-md-6">
-                    List of HTTP status codes
-                </div>
-            </div>
-                    <div class="row">
-                <div class="col-md-6">
                                             <a href="Patterns/Commons/Registry.html"><abbr title="Patterns\Commons\Registry">Patterns\Commons\Registry</abbr></a>
                                     </div>
                 <div class="col-md-6">
                     A classic registry manager
+                </div>
+            </div>
+                    <div class="row">
+                <div class="col-md-6">
+                                            <em><a href="Patterns/Interfaces/AccessibleInterface.html"><abbr title="Patterns\Interfaces\AccessibleInterface">Patterns\Interfaces\AccessibleInterface</abbr></a></em>
+                                    </div>
+                <div class="col-md-6">
+                    Magic properties accessors
                 </div>
             </div>
                     <div class="row">
@@ -236,6 +228,22 @@ method chaining constructing them like:
             </div>
                     <div class="row">
                 <div class="col-md-6">
+                                            <em><a href="Patterns/Interfaces/ServiceContainerInterface.html"><abbr title="Patterns\Interfaces\ServiceContainerInterface">Patterns\Interfaces\ServiceContainerInterface</abbr></a></em>
+                                    </div>
+                <div class="col-md-6">
+                    A simple service container interface
+                </div>
+            </div>
+                    <div class="row">
+                <div class="col-md-6">
+                                            <em><a href="Patterns/Interfaces/SingletonInterface.html"><abbr title="Patterns\Interfaces\SingletonInterface">Patterns\Interfaces\SingletonInterface</abbr></a></em>
+                                    </div>
+                <div class="col-md-6">
+                    A basic singleton interface
+                </div>
+            </div>
+                    <div class="row">
+                <div class="col-md-6">
                                             <em><a href="Patterns/Interfaces/StaticCreatorInterface.html"><abbr title="Patterns\Interfaces\StaticCreatorInterface">Patterns\Interfaces\StaticCreatorInterface</abbr></a></em>
                                     </div>
                 <div class="col-md-6">
@@ -253,10 +261,51 @@ method chaining constructing them like:
             </div>
                     <div class="row">
                 <div class="col-md-6">
-                                            <a href="Patterns/Traits/Optionable.html"><abbr title="Patterns\Traits\Optionable">Patterns\Traits\Optionable</abbr></a>
+                                            <em><a href="Patterns/Interfaces/TranslatableInterface.html"><abbr title="Patterns\Interfaces\TranslatableInterface">Patterns\Interfaces\TranslatableInterface</abbr></a></em>
+                                    </div>
+                <div class="col-md-6">
+                    A simple interface for translation objects
+                </div>
+            </div>
+                    <div class="row">
+                <div class="col-md-6">
+                                            <em><a href="Patterns/Interfaces/ViewInterface.html"><abbr title="Patterns\Interfaces\ViewInterface">Patterns\Interfaces\ViewInterface</abbr></a></em>
+                                    </div>
+                <div class="col-md-6">
+                    
+
+                </div>
+            </div>
+                    <div class="row">
+                <div class="col-md-6">
+                                            <a href="Patterns/Traits/AccessibleTrait.html"><abbr title="Patterns\Traits\AccessibleTrait">Patterns\Traits\AccessibleTrait</abbr></a>
+                                    </div>
+                <div class="col-md-6">
+                    Magic properties accessors
+                </div>
+            </div>
+                    <div class="row">
+                <div class="col-md-6">
+                                            <a href="Patterns/Traits/OptionableTrait.html"><abbr title="Patterns\Traits\OptionableTrait">Patterns\Traits\OptionableTrait</abbr></a>
                                     </div>
                 <div class="col-md-6">
                     This trait is the exact copy of the <code>\Patterns\Abstracts\AbstractOptionable</code> class.
+                </div>
+            </div>
+                    <div class="row">
+                <div class="col-md-6">
+                                            <a href="Patterns/Traits/SingletonTrait.html"><abbr title="Patterns\Traits\SingletonTrait">Patterns\Traits\SingletonTrait</abbr></a>
+                                    </div>
+                <div class="col-md-6">
+                    Basic singleton object definition
+                </div>
+            </div>
+                    <div class="row">
+                <div class="col-md-6">
+                                            <a href="Patterns/Traits/TemplateViewTrait.html"><abbr title="Patterns\Traits\TemplateViewTrait">Patterns\Traits\TemplateViewTrait</abbr></a>
+                                    </div>
+                <div class="col-md-6">
+                    This trait is the exact copy of the <code>\Patterns\Abstracts\AbstractView</code> class.
                 </div>
             </div>
             </div>
