--- a/phpdoc/interfaces.html
+++ b/phpdoc/interfaces.html
@@ -65,6 +65,14 @@
     <div class="container-fluid underlined">
                     <div class="row">
                 <div class="col-md-6">
+                                            <em><a href="Patterns/Interfaces/AccessibleInterface.html"><abbr title="Patterns\Interfaces\AccessibleInterface">Patterns\Interfaces\AccessibleInterface</abbr></a></em>
+                                    </div>
+                <div class="col-md-6">
+                    Magic properties accessors
+                </div>
+            </div>
+                    <div class="row">
+                <div class="col-md-6">
                                             <em><a href="Patterns/Interfaces/ArrayInterface.html"><abbr title="Patterns\Interfaces\ArrayInterface">Patterns\Interfaces\ArrayInterface</abbr></a></em>
                                     </div>
                 <div class="col-md-6">
@@ -154,6 +162,22 @@
             </div>
                     <div class="row">
                 <div class="col-md-6">
+                                            <em><a href="Patterns/Interfaces/ServiceContainerInterface.html"><abbr title="Patterns\Interfaces\ServiceContainerInterface">Patterns\Interfaces\ServiceContainerInterface</abbr></a></em>
+                                    </div>
+                <div class="col-md-6">
+                    A simple service container interface
+                </div>
+            </div>
+                    <div class="row">
+                <div class="col-md-6">
+                                            <em><a href="Patterns/Interfaces/SingletonInterface.html"><abbr title="Patterns\Interfaces\SingletonInterface">Patterns\Interfaces\SingletonInterface</abbr></a></em>
+                                    </div>
+                <div class="col-md-6">
+                    A basic singleton interface
+                </div>
+            </div>
+                    <div class="row">
+                <div class="col-md-6">
                                             <em><a href="Patterns/Interfaces/StaticCreatorInterface.html"><abbr title="Patterns\Interfaces\StaticCreatorInterface">Patterns\Interfaces\StaticCreatorInterface</abbr></a></em>
                                     </div>
                 <div class="col-md-6">
@@ -167,6 +191,23 @@ method chaining constructing them like:
                                     </div>
                 <div class="col-md-6">
                     A simple interface to manage a set of options statically
+                </div>
+            </div>
+                    <div class="row">
+                <div class="col-md-6">
+                                            <em><a href="Patterns/Interfaces/TranslatableInterface.html"><abbr title="Patterns\Interfaces\TranslatableInterface">Patterns\Interfaces\TranslatableInterface</abbr></a></em>
+                                    </div>
+                <div class="col-md-6">
+                    A simple interface for translation objects
+                </div>
+            </div>
+                    <div class="row">
+                <div class="col-md-6">
+                                            <em><a href="Patterns/Interfaces/ViewInterface.html"><abbr title="Patterns\Interfaces\ViewInterface">Patterns\Interfaces\ViewInterface</abbr></a></em>
+                                    </div>
+                <div class="col-md-6">
+                    
+
                 </div>
             </div>
             </div>
