new documentation generation (1.1.0)

--- a/phpdoc/Patterns/Abstracts/AbstractAccessible.html
+++ b/phpdoc/Patterns/Abstracts/AbstractAccessible.html
@@ -73,7 +73,8 @@
     </div>
 
     <p>abstract     class
-    <strong>AbstractAccessible</strong></p>
+    <strong>AbstractAccessible</strong>        implements
+        <a href="../../Patterns/Interfaces/AccessibleInterface.html"><abbr title="Patterns\Interfaces\AccessibleInterface">AccessibleInterface</abbr></a></p>
 
             <div class="description">
             <p>Magic properties accessors</p>            <p>This abstract class defines commons magic methods to directly access (set, unset, check or get)
@@ -152,7 +153,7 @@ in the child class ; you can use it easily by extending it.</p>        </div>
             <div id="method-details">
                     <div class="method-item">
                     <h3 id="method___set">
-        <div class="location">at line 70</div>
+        <div class="location">at line 100</div>
         <code>                    <a href="../../Patterns/Abstracts/AbstractAccessible.html"><abbr title="Patterns\Abstracts\AbstractAccessible">AbstractAccessible</abbr></a>
     <strong>__set</strong>(string $var, string $val)</code>
     </h3>
@@ -203,7 +204,7 @@ in the child class ; you can use it easily by extending it.</p>        </div>
             </div>
                     <div class="method-item">
                     <h3 id="method___get">
-        <div class="location">at line 95</div>
+        <div class="location">at line 125</div>
         <code>                    mixed
     <strong>__get</strong>(string $var)</code>
     </h3>
@@ -248,7 +249,7 @@ in the child class ; you can use it easily by extending it.</p>        </div>
             </div>
                     <div class="method-item">
                     <h3 id="method___isset">
-        <div class="location">at line 119</div>
+        <div class="location">at line 149</div>
         <code>                    bool
     <strong>__isset</strong>(string $var)</code>
     </h3>
@@ -293,7 +294,7 @@ in the child class ; you can use it easily by extending it.</p>        </div>
             </div>
                     <div class="method-item">
                     <h3 id="method___unset">
-        <div class="location">at line 143</div>
+        <div class="location">at line 173</div>
         <code>                    <a href="../../Patterns/Abstracts/AbstractAccessible.html"><abbr title="Patterns\Abstracts\AbstractAccessible">AbstractAccessible</abbr></a>
     <strong>__unset</strong>(string $var)</code>
     </h3>
