--- a/phpdoc/Patterns/Traits.html
+++ b/phpdoc/Patterns/Traits.html
@@ -84,6 +84,15 @@
             </div>
                     <div class="row">
                 <div class="col-md-6">
+                                            <a href="../Patterns/Traits/ApiManagerTrait.html"><abbr title="Patterns\Traits\ApiManagerTrait">Patterns\Traits\ApiManagerTrait</abbr></a>
+                                    </div>
+                <div class="col-md-6">
+                    
+
+                </div>
+            </div>
+                    <div class="row">
+                <div class="col-md-6">
                                             <a href="../Patterns/Traits/OptionableTrait.html"><abbr title="Patterns\Traits\OptionableTrait">Patterns\Traits\OptionableTrait</abbr></a>
                                     </div>
                 <div class="col-md-6">
