--- a/phpdoc/classes.html
+++ b/phpdoc/classes.html
@@ -228,14 +228,6 @@ method chaining constructing them like:
             </div>
                     <div class="row">
                 <div class="col-md-6">
-                                            <em><a href="Patterns/Interfaces/ServiceContainerInterface.html"><abbr title="Patterns\Interfaces\ServiceContainerInterface">Patterns\Interfaces\ServiceContainerInterface</abbr></a></em>
-                                    </div>
-                <div class="col-md-6">
-                    A simple service container interface
-                </div>
-            </div>
-                    <div class="row">
-                <div class="col-md-6">
                                             <em><a href="Patterns/Interfaces/SingletonInterface.html"><abbr title="Patterns\Interfaces\SingletonInterface">Patterns\Interfaces\SingletonInterface</abbr></a></em>
                                     </div>
                 <div class="col-md-6">
@@ -282,6 +274,15 @@ method chaining constructing them like:
                                     </div>
                 <div class="col-md-6">
                     Magic properties accessors
+                </div>
+            </div>
+                    <div class="row">
+                <div class="col-md-6">
+                                            <a href="Patterns/Traits/ApiManagerTrait.html"><abbr title="Patterns\Traits\ApiManagerTrait">Patterns\Traits\ApiManagerTrait</abbr></a>
+                                    </div>
+                <div class="col-md-6">
+                    
+
                 </div>
             </div>
                     <div class="row">
