--- a/phpdoc/traits.html
+++ b/phpdoc/traits.html
@@ -63,12 +63,21 @@
     </div>
 
     <div class="container-fluid underlined">
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            <div class="row">
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        <div class="row">
                     <div class="col-md-6">
                         <a href="Patterns/Traits/AccessibleTrait.html"><abbr title="Patterns\Traits\AccessibleTrait">Patterns\Traits\AccessibleTrait</abbr></a>
                     </div>
                     <div class="col-md-6">
                         Magic properties accessors
+                    </div>
+                </div>
+                                                <div class="row">
+                    <div class="col-md-6">
+                        <a href="Patterns/Traits/ApiManagerTrait.html"><abbr title="Patterns\Traits\ApiManagerTrait">Patterns\Traits\ApiManagerTrait</abbr></a>
+                    </div>
+                    <div class="col-md-6">
+                        
+
                     </div>
                 </div>
                                                 <div class="row">
