--- a/phpdoc/Patterns/Interfaces/StaticCreatorInterface.html
+++ b/phpdoc/Patterns/Interfaces/StaticCreatorInterface.html
@@ -12,6 +12,9 @@
         <script src="../../js/bootstrap.min.js"></script>
         <script src="../../js/typeahead.min.js"></script>
         <script src="../../sami.js"></script>
+        <meta name="MobileOptimized" content="width">
+        <meta name="HandheldFriendly" content="true">
+        <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
     
     
     </head>
@@ -73,7 +76,8 @@
     </div>
 
     <p>    interface
-    <strong>StaticCreatorInterface</strong></p>
+    <strong>StaticCreatorInterface</strong>
+</p>
 
             <div class="description">
             <p>This interface allows to create objects that can be statically created "on-the-fly" to allow
@@ -88,7 +92,8 @@ method chaining constructing them like:</p>            <p>$obj = ObjectStaticCre
             <div class="container-fluid underlined">
                     <div class="row">
                 <div class="col-md-2 type">
-                    static&nbsp;<a href="../../Patterns/Interfaces/StaticCreatorInterface.html"><abbr title="Patterns\Interfaces\StaticCreatorInterface">StaticCreatorInterface</abbr></a>
+                    static&nbsp;
+    <a href="../../Patterns/Interfaces/StaticCreatorInterface.html"><abbr title="Patterns\Interfaces\StaticCreatorInterface">StaticCreatorInterface</abbr></a>
                 </div>
                 <div class="col-md-8 type">
                     <a href="#method_create">create</a>()
@@ -105,7 +110,8 @@ method chaining constructing them like:</p>            <p>$obj = ObjectStaticCre
                     <div class="method-item">
                     <h3 id="method_create">
         <div class="location">at line 40</div>
-        <code>        static            <a href="../../Patterns/Interfaces/StaticCreatorInterface.html"><abbr title="Patterns\Interfaces\StaticCreatorInterface">StaticCreatorInterface</abbr></a>
+        <code>        static            
+    <a href="../../Patterns/Interfaces/StaticCreatorInterface.html"><abbr title="Patterns\Interfaces\StaticCreatorInterface">StaticCreatorInterface</abbr></a>
     <strong>create</strong>()</code>
     </h3>
     <div class="details">
@@ -115,7 +121,8 @@ method chaining constructing them like:</p>            <p>$obj = ObjectStaticCre
 
                     <table class="table table-condensed">
         <tr>
-            <td><a href="../../Patterns/Interfaces/StaticCreatorInterface.html"><abbr title="Patterns\Interfaces\StaticCreatorInterface">StaticCreatorInterface</abbr></a></td>
+            <td>
+    <a href="../../Patterns/Interfaces/StaticCreatorInterface.html"><abbr title="Patterns\Interfaces\StaticCreatorInterface">StaticCreatorInterface</abbr></a></td>
             <td>Must return a new instance of the object created with function arguments</td>
         </tr>
     </table>
